# Chess

./: CMakeLists.txt  main.cc
headers/: board.hh  moves.hh  perft.hh  pieces.hh  tools.hh
src/: CMakeLists.txt  board.cc  moves.cc  perft.cc  pieces.cc  tools.cc
tests/: edwards_1.perft  en-passant.perft  position-2.perft  position-3.perft  position-4.perft  position-6.perft  test-10.perft  test-11.perft  test-12.perft  test-13.perft  test-14.perft  test-15.perft  test-16.perft  test-17.perft  test-18.perft  test-19.perft  test-2.perft  test-20.perft  test-3.perft  test-4.perft  test-5.perft  test-6.perft  test-7.perft  test-9.perft
